--- a/config.yaml
+++ b/config.yaml
@@ -4,10 +4,6 @@ cookie:
   name: sample_cookie_name
 credentials:
   usernames:
-    Mohamad Alhajar:
-      email: malhajar@example.com
-      name: Mohamad Alhajar
-      password: $2b$12$BV2pemNqS//6apCr1EdpWufoCWiPF.yh2aWzSGpksORuErn7X/LR.
     malhajae:
       email: sadada
       name: adasda
@@ -28,10 +24,18 @@ credentials:
       email: sads
       name: sada
       password: $2b$12$t1pKDQjwQ4a9zSwtomZoz.B04j3eFqnaX0X0j6rfAU7WkAbfBIYOu
+    mo:
+      email: mo
+      name: mo
+      password: $2b$12$Y2usY3t5Rc8td81hGhr.TOWxgwXBmLSooaFxp.dGrLh6HK6RQKDYi
     mohamad:
       email: sadasd
       name: asdasd
       password: $2b$12$qikHJ4ojfbXyH/yJT9YTjOW92eI4e6dtO4Koq0C4PsaKF3y6YzZm6
+    mohamad alhajar:
+      email: malhajar@example.com
+      name: Mohamad Alhajar
+      password: $2b$12$BV2pemNqS//6apCr1EdpWufoCWiPF.yh2aWzSGpksORuErn7X/LR.
     test_user:
       email: test@example.com
       name: Test User
